--- a/Phase1&2.ipynb
+++ b/Phase1&2.ipynb
@@ -1446,34 +1446,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "DataFrame after Decimal Scaling Normalization:\n",
-            "   year  country        city    stage  home_team      away_team  home_score  \\\n",
-            "0  1930  Uruguay  Montevideo  Group 1     France         Mexico         0.4   \n",
-            "1  1930  Uruguay  Montevideo  Group 4    Belgium  United States         0.0   \n",
-            "2  1930  Uruguay  Montevideo  Group 2     Brazil     Yugoslavia         0.1   \n",
-            "3  1930  Uruguay  Montevideo  Group 3       Peru        Romania         0.1   \n",
-            "4  1930  Uruguay  Montevideo  Group 1  Argentina         France         0.1   \n",
-            "\n",
-            "   away_score outcome    win_conditions   winning_team losing_team  \\\n",
-            "0         0.1       H  Italy won in AET         France      Mexico   \n",
-            "1         0.3       A  Italy won in AET  United States     Belgium   \n",
-            "2         0.2       A  Italy won in AET     Yugoslavia      Brazil   \n",
-            "3         0.3       A  Italy won in AET        Romania        Peru   \n",
-            "4         0.0       H  Italy won in AET      Argentina      France   \n",
-            "\n",
-            "         date month dayofweek  \n",
-            "0  1930-07-13   Jul    Sunday  \n",
-            "1  1930-07-13   Jul    Sunday  \n",
-            "2  1930-07-14   Jul    Monday  \n",
-            "3  1930-07-14   Jul    Monday  \n",
-            "4  1930-07-15   Jul   Tuesday  \n"
+            "Country Stats:\n",
+            "          country  home_score_mean  away_score_mean  total_wins\n",
+            "0       Argentina         1.421053         1.210526          13\n",
+            "1          Brazil         1.441860         1.476744          20\n",
+            "2           Chile         1.406250         1.343750          10\n",
+            "3         England         1.437500         1.343750           6\n",
+            "4          France         1.756098         1.280488          27\n",
+            "5         Germany         1.382353         0.941176          28\n",
+            "6           Italy         1.478261         1.173913          12\n",
+            "7           Japan         1.125000         1.000000          12\n",
+            "8          Mexico         1.476190         1.202381          26\n",
+            "9          Russia         1.359375         1.265625          12\n",
+            "10   South Africa         1.171875         1.062500          17\n",
+            "11    South Korea         1.625000         1.187500           9\n",
+            "12          Spain         1.730769         0.980769          20\n",
+            "13         Sweden         1.914286         1.571429          15\n",
+            "14    Switzerland         2.500000         2.269231           5\n",
+            "15  United States         1.557692         1.134615          14\n",
+            "16        Uruguay         2.111111         1.611111           4\n"
           ]
         }
       ],
@@ -1481,27 +1479,26 @@
         "import pandas as pd\n",
         "data1 = pd.read_csv('Cleaned_dataset.csv')\n",
         "\n",
-        "columns_to_normalize = ['home_score', 'away_score']\n",
+        "country_stats = data1.groupby('country').agg(\n",
+        "    home_score_mean=('home_score', 'mean'),\n",
+        "    away_score_mean=('away_score', 'mean'),\n",
+        "    total_wins=('winning_team', lambda x: (x == x.mode()[0]).sum())  \n",
+        ").reset_index()\n",
         "\n",
-        "for column in columns_to_normalize:\n",
-        "    max_abs_value = data1[column].abs().max()\n",
-        "    data1[column] = data1[column] / (10 ** len(str(int(max_abs_value))))\n",
-        "\n",
-        "\n",
-        "print(\"DataFrame after Decimal Scaling Normalization:\")\n",
-        "print(data1.head())"
+        "print(\"Country Stats:\")\n",
+        "print(country_stats)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### 4-Discretization"
+        "ؤ"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
